# cargo-binrw

./: .Cargo.toml.swp  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  binrw.toml  docker-testing-entrypoint.sh
binrw-tracing/: Cargo.toml  build.rs
binrw-tracing/src/: lib.rs
cargo-binrw/: Cargo.toml
cargo-binrw/src/: error.rs  lib.rs  toolchain_util.rs
cargo-binrw/src/cli/: project.rs
cargo-binrw/src/mon/: mod.rs  server.rs  tcp_listen.rs
cargo-binrw/src/proto/: mod.rs
cargo-binrw/tests/: cli.rs
cargo-binrw/tests/fixtures/: mod.rs
data/: base.toml  default.toml
src/: lib.rs
src/cli/: mod.rs  project.rs
src/mon/: server.rs  server.rs.bak
src/proto/: mod.rs
tests/: cli.rs
