[package]
name = "binrw-tracing"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]

[build-dependencies]
cbindgen = "0.20.0"
binrw_trace = { version = "0.1.0", path = ".." }
rustls-ffi = { version = "0.8.2", features = [ "no_log_capture" ] }

[lib]
crate-type = ["cdylib"]
bench = false
