[package]
name = "binrw-tracing"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]

[build-dependencies]
cbindgen = "0.20.0"
cargo-binrw = { version = "0.1.0", path = "../cargo-binrw" }
rustls-ffi = { version = "0.8.2", features = [ "no_log_capture" ] }

[lib]
crate-type = ["cdylib"]
bench = false
